--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>شركة لودر ستار</title>
+<title>شركة لورد ستار</title>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
 <link rel="stylesheet" href="css/animate.css">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
@@ -54,7 +54,7 @@
         <div class="col-md-8 col-sm-12">
           <div class="banner-text">
 <br><br><br>  
-            <h2 class="white">لودر ستار للخدمات الفندقية والنظافة المتكاملة</h2>
+            <h2 class="white">لورد ستار للخدمات الفندقية والنظافة المتكاملة</h2>
             <h6 class="white">نمتلك خبرة طويلة في مجالنا، ولذلك نستطيع تقديم خدمات متميّزة لك <a href="http://w3Template.com" target="_blank" rel="dofollow" class="weblink"> </a></h6>
             <p class="banner-text white" style="text-align: right;">
               شركة لورد ستار هي شركة متخصصة في خدمات النظافة، ولديها خبرة تزيد عن 15 عامًا في هذا المجال. الشركة تقدم مجموعة متنوعة من الخدمات التي تشمل النظافة العامة  مما يجعلها خيارًا موثوقًا للمنازل والشركات والمؤسسات المختلفة. إليك نظرة عامة على خدماتها وميزاتها:
